<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/rg_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/handler_postDelayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handler_postdelayed"/>

        <RadioButton
            android:id="@+id/timerTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timertask"/>

        <RadioButton
            android:id="@+id/ScheduledExecutorService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduled"/>

        <RadioButton
            android:id="@+id/RxJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rxjava"/>

        <RadioButton
            android:id="@+id/CountDownTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conuntdown"/>
    </RadioGroup>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#f97e7e"
        android:text="@string/start"/>

    <TextView
        android:id="@+id/tv_count_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black_000000"
        android:textSize="48sp"
        android:textStyle="bold"/>
</LinearLayout>